cut down to basics

--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
 
   <script src="src/js/lib/ga.js"></script>
   <script type="application/javascript">
-    // Redirect to HTTPS for Github Pages
-    if (window.location.protocol !== "https:"){
-      window.location.protocol = "https";
-    }
+    // // Redirect to HTTPS for Github Pages
+    // if (window.location.protocol !== "https:"){
+    //   window.location.protocol = "https";
+    // }
   </script>
 
 </body>
